--- a/Style.css
+++ b/Style.css
@@ -4,13 +4,15 @@
     font-family: 'Josefin Sans', sans-serif;
     box-sizing: border-box;
 }
-.hero{
+.background{
     height: 100vh;
     width: 100%;
-    background-image: url(https://ca.slack-edge.com/T02A8SMAS9J-U02BHT1V2TU-bdaada3aca09-512); /*work on this. Needs to have a black background and higher res photo. Current photo is just temporary*/
+    /* OR background-image: url(https://ca.slack-edge.com/T02A8SMAS9J-U02BHT1V2TU-bdaada3aca09-512); /*work on this. Needs to have a black background and higher res photo. Current photo " is just temporary*/
+    /* OR background-image: url("https://wallpapercave.com/wp/wp3157739.jpg");*/
+    background: url('assets/images/selfie\ cartoonish.jpg') no-repeat center; /*Cartoonish background img*/
     background-size: cover;
     background-position: center;
-}
+    }
 nav{
     display: flex;
     align-items: center;
@@ -21,7 +23,7 @@ nav{
     
 }
 .logo{
-    color: white;
+    color: #fff;
     font-size: 35px;
     letter-spacing: 1px;
     cursor: pointer;
@@ -29,6 +31,18 @@ nav{
 span{
     color: #f9004d;
 }
+/*added radient hover effect*/
+span:hover{
+    background: #4285F4;
+    color: #fff;
+    border-radius: 5px;
+    transition: .4s;
+    box-shadow: 0 0 5px #03e9f4,
+                0 0 25px #03e9f4,
+                0 0 50px #03e9f4,
+                0 0 100px #03e9f4;
+}
+
 nav ul li{
     list-style-type: none;
     display: inline-block;
@@ -37,10 +51,25 @@ nav ul li{
 nav ul li a{
     color: white;
     text-decoration: none;
+    background-color: #f9004d;
+    text-decoration: none;
+    border: 2px solid transparent;
+    font-weight: bold;
+    padding: 10px 25px;
+    border-radius: 30px;
+    transition: transform .4s;
 }
+/*added radient hover effect*/
 nav ul li a:hover{
-    color: #f9004d;
+    color: black;
     transition: .4s;
+    background: #4285F4;
+    color: #fff;
+    border-radius: 30px;
+    box-shadow: 0 0 5px #03e9f4,
+              0 0 25px #03e9f4,
+              0 0 50px #03e9f4,
+              0 0 100px #03e9f4;
 }
 .btn{
     background-color: #f9004d;
@@ -52,8 +81,16 @@ nav ul li a:hover{
     border-radius: 30px;
     transition: transform .4s;
 }
+/*added radient hover effect*/
 .btn:hover{
     transform: scale(1.1);
+    background: #4285F4;
+    color: #fff;
+    border-radius: 30px;
+    box-shadow: 0 0 5px #03e9f4,
+              0 0 25px #03e9f4,
+              0 0 50px #03e9f4,
+              0 0 100px #03e9f4;
 }
 .content{
     position: absolute;
@@ -69,10 +106,10 @@ h1{
 h3{
     color: white;
     font-size: 25px;
-    margin-bottom: 50px; /*Pulled the header down and made visible "I am a Full-Stacks Engineer" with [white] appearance*/
+    margin-bottom: 50px; /*Pulled the header down and made visible "I am a Full-Stacks Engineer" with [white/Red] appearance*/
 }
 h4{
-    color: #585c63;
+    color:#f9004d;
     font-size: 20px;
     letter-spacing: 2px;
 }
