--- a/Style.css
+++ b/Style.css
@@ -185,3 +185,91 @@ width: 33%;
 padding: 10px;
 justify-content: center;
 }
+.about{
+    width: 100%;
+    padding: 100px 0px;
+    background-color: #191919;
+}
+.about img{
+    height: auto;
+    width: 430px;
+}
+.about-text{
+    width: 550px;
+}
+.main{
+    width: 1130px;
+    max-width: 95%;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    color: white;
+    font-size: 15px;
+}
+h2{
+    color: white;
+    font-size: 75px;
+    text-transform: capitalize;
+    margin-bottom: 20px;
+}
+h5{
+    color:white;
+    letter-spacing: 2px;
+    font-size: 22px;
+    margin-bottom: 25px;
+    text-transform: capitalize;
+}
+p{
+    color: #03e9f4;
+    letter-spacing: 1px;
+    line-height: 28px;
+    font-size: 18px;
+    margin-bottom: 45px;
+}
+button{
+    background-color: #f9004d;
+    color: #fff;
+    text-decoration: none;
+    border: 2px solid transparent;
+    font-weight: bold;
+    padding: 12.5px 25px;
+    border-radius: 30px;
+    transition: .5s;
+}
+button:hover{
+    transform: scale(1.1);
+    background: #4285F4;
+    color: #fff;
+    cursor: pointer;
+    border-radius: 30px;
+    box-shadow: 0 0 5px #03e9f4,
+              0 0 25px #03e9f4,
+              0 0 50px #03e9f4,
+              0 0 100px #0;
+
+/*.services .title{
+    color: blueviolet;
+    background: lightcoral;
+    font-size: 75px;
+    margin: 30px;
+    text-align: center;
+    width: 1130px;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+}
+.box{
+    height: 365px;
+    width: 335px;
+    padding: 20px 35px;
+    background: lightcoral;
+}*/ 
+
+.container .box .title{
+    background-color: blue;
+    width: 100%;
+    padding: 100px 0px;
+    text-align: center;
+
+}
