--- a/Style.css
+++ b/Style.css
@@ -11,16 +11,12 @@
     background-size: cover;
     background-position: center;
 }
-nav{ /*Made the navbar stick while scrolling. May need to change it later due to font-color*/
-    display: flex;
-    position: fixed;
-    z-index:initial;
-    align-items: center;
-    justify-content: space-between;
-    padding-top: 45px;
-    padding-left: 8%;
-    padding-right: 8%;
+
+.navbar-brand {
+
+    
 }
+
 p1{
     visibility: hidden;
     background-color: black;
@@ -34,57 +30,7 @@ p1{
 span{/*A little flavor on the words "Portfolio*/
     color: #f9004d;
 }
-span:hover{/*Gradient shine*/
-    background: #4285F4;
-    color: #fff;
-    border-radius: 5px;
-    transition: .4s;
-    box-shadow: 0 0 5px #03e9f4,
-                0 0 25px #03e9f4,
-                0 0 50px #03e9f4,
-                0 0 100px #03e9f4;
-}
-span:hover{/*Gradient shine while hovering*/
-    background: #4285F4;
-    color: #fff;
-    border-radius: 5px;
-    transition: .4s;
-    box-shadow: 0 0 5px #03e9f4,
-                0 0 25px #03e9f4,
-                0 0 50px #03e9f4,
-                0 0 100px #03e9f4;
-}
-/*.nav-links{ If the navbar color wants to be changed
-    
-}*/
-nav ul li{
-    list-style-type: none;
-    display: inline-block;
-    padding: 10px 30px;
-}
-nav ul li a{
-    color: white;
-    text-decoration: none;
-    background-color: #f9004d;
-    text-decoration: none;
-    border: 2px solid transparent;
-    font-weight: bold;
-    padding: 10px 25px;
-    border-radius: 30px;
-    transition: transform .4s;
-}
-/*added radient hover effect*/
-nav ul li a:hover{
-    color: black;
-    transition: .4s;
-    background: #4285F4;
-    color: #fff;
-    border-radius: 30px;
-    box-shadow: 0 0 5px #03e9f4,
-              0 0 25px #03e9f4,
-              0 0 50px #03e9f4,
-              0 0 100px #03e9f4;
-}
+
 
 .btn{
     background-color: #f9004d;
@@ -110,7 +56,7 @@ nav ul li a:hover{
 
 .content{
     position: absolute;
-    top: 50%;
+    top: 65%;
     left:8%;
     transform: translateY(-50%);
 }
