--- a/Style.css
+++ b/Style.css
@@ -1,3 +1,10 @@
+@keyframes pulse {
+    0% { transform: scale(1); }
+    50% { transform: scale(1.1); }
+    100% { transform: scale(1); }
+    
+  }
+
 *{
     padding: 0;
     margin: 0;
@@ -11,6 +18,16 @@
     background-size: cover;
     background-position: center;
 }
+
+#imagemiddle {
+    border-radius: 50px;
+
+}
+
+/*#imagemiddle:hover {
+    animation: pulse 1s infinite;
+    animation-timing-function: linear;   
+  }*/
 
 .navbar-brand {
 
@@ -173,7 +190,7 @@ button:hover{
 .title h2{
     color: #f9004d;
     font-size: 75px;
-    width: 1130px;
+    width: auto;
     margin: 30px auto;
     text-align: center;
 }
