--- a/Style.css
+++ b/Style.css
@@ -4,36 +4,6 @@
     100% { transform: scale(1); }
   }
 
-  @keyframes stretch {
-    0% {
-      transform: scale(.3);
-      background-color: red;
-      border-radius: 100%;
-    }
-    50% {
-      background-color: orange;
-    }
-    100% {
-      transform: scale(1.5);
-      background-color: yellow;
-    }
-  }
-  
-  #cardOne {
-    height: 250px;
-    width: 250px;
-    margin: 0 auto;
-    background-color: red;
-    animation-name: stretch;
-    animation-duration: 1.5s; 
-    animation-timing-function:linear; 
-    animation-delay: 3;
-    animation-direction: alternate;
-    animation-iteration-count: infinite;
-    animation-fill-mode:both;
-    animation-play-state: running;
-  }
-
 *{
     padding: 0;
     margin: 0;
@@ -383,4 +353,8 @@ footer p:nth-child(2){
     color:#f9004d;
     bottom: 35px;
     font-size: 34px; 
+}
+
+.fa-user, .fa-bell, .fa-bars {
+    animation: pulse 1s linear infinite;
 }
