--- a/Style.css
+++ b/Style.css
@@ -1,3 +1,12 @@
+:root {
+    --primary: #164e63;
+    --secondary: #00acc2;
+    --dark: #1c1c20;
+    --light: #00d7c7;
+    --white: #ffffff;
+    --themered: #f9004d;
+}
+
 @keyframes pulse {
     0% { transform: scale(1); }
     50% { transform: scale(1.1); }
@@ -44,12 +53,12 @@ p1{
     cursor: pointer;
 }
 span{/*A little flavor on the words "Portfolio*/
-    color: #f9004d;
+    color: var(--themered);
 }
 
 
 .btn{
-    background-color: #f9004d;
+    background-color: var(--themered);
     color: white;
     text-decoration: none;
     border: 2px solid transparent;
@@ -100,7 +109,7 @@ h4{
     display: inline-block;
     width: 100%;
     padding: 14px 130px 14px 15px;
-    border: 2px solid #f9004d;
+    border: 2px solid var(--themered);
     outline: none;
     border-radius: 30px;
     cursor: pointer;
@@ -112,7 +121,7 @@ h4{
     border: none;
     padding: 10px 30px;
     border-radius: 30px;
-    background-color:#f9004d;
+    background-color:var(--themered);
     color: white;
     box-shadow: 0px 0px 5px #000, 0px 0px 15px #858585;
     top: 6px;
@@ -160,7 +169,7 @@ h4{
     margin-bottom: 45px;
 }
 button{
-    background-color:#f9004d;
+    background-color:var(--themered);
     color: white;
     text-decoration: none;
     border: 2px solid transparent;
@@ -172,7 +181,6 @@ button{
 button:hover{
     color: black;
     transition: .4s;
-    background: #4285F4;
     color: #fff;
     border-radius: 30px;
     box-shadow: 0 0 5px #03e9f4,
@@ -207,17 +215,14 @@ button:hover{
     border-radius: 5px;
     animation: pulse 5s infinite;
 }
-#cardOne:hover{
-    animation:cubic-bezier(0.645, 0.045, 0.355, 1);
-}
 
 .card{
-    height: 365px;
+    height: 35px;
     width: 335px;
-    padding: 20px 35px;
-    background: #191919;
+    padding:0;
+    background: #ffffff;
     border-radius: 20px;
-    margin: 15px;
+    margin: 0;
     position: relative;
     overflow: hidden;
     text-align: center;
@@ -227,7 +232,7 @@ button:hover{
     display: block;
     text-align: center;
     margin: 25px 0px;
-    color: #f9004d;
+    color: var(--themered);
 
 }
 h5{
@@ -242,7 +247,7 @@ h5{
     margin-bottom: 25px;
 }
 .card .button{
-    background-color:#f9004d;
+    background-color:var(--themered);
     color: white;
     text-decoration: none;
     border: 2px solid transparent;
@@ -251,17 +256,7 @@ h5{
     border-radius: 30px;
     transition: .4s; 
 }
-.card .button:hover{
-    color: black;
-    transition: .4s;
-    background: #4285F4;
-    color: #fff;
-    border-radius: 30px;
-    box-shadow: 0 0 5px #03e9f4,
-              0 0 25px #03e9f4,
-              0 0 50px #03e9f4,
-              0 0 100px #03e9f4;
-}
+
 .contact-me{
     width: 100%;
     height: 290px;
@@ -277,27 +272,7 @@ h5{
     font-weight: bold;
     margin-bottom: 25px;
 }
-.contact-me .button-two{
-    background-color:#f9004d;
-    color: white;
-    text-decoration: none;
-    border: 2px solid transparent;
-    font-weight: bold;
-    padding: 13px 30px;
-    border-radius: 30px;
-    transition: .4s; 
-}
-.contact-me .button-two:hover{
-    color: black;
-    transition: .4s;
-    background: #4285F4;
-    color: #fff;
-    border-radius: 30px;
-    box-shadow: 0 0 5px #03e9f4,
-              0 0 25px #03e9f4,
-              0 0 50px #03e9f4,
-              0 0 100px #03e9f4;
-}
+
 footer{
     position: relative;
     width: 100%;
@@ -330,7 +305,7 @@ footer p:nth-child(2){
     display: flex;
     align-items: center;
     justify-content: center;
-    background:  #f9004d;
+    background:  var(--themered);
     border-radius: 50%;
     margin: 22px 10px;
     color: white;
@@ -350,11 +325,115 @@ footer p:nth-child(2){
 }
 .end{
     position: absolute;
-    color:#f9004d;
+    color:var(--themered);
     bottom: 35px;
     font-size: 34px; 
 }
 
-.fa-user, .fa-bell, .fa-bars {
-    animation: pulse 1s linear infinite;
+
+/*Card Section*/
+.card {
+    margin: 100px auto 0;
+    width: 400px;
+    height: 600px;
+    perspective: 1000px;
 }
+
+.card__inner {
+    width: 100%;
+    height: 100%;
+    transition: transform 1s;
+    transform-style: preserve-3d;
+    cursor: pointer;
+    position: relative;
+}
+
+.card__inner.is-flipped {
+    transform: rotateY(180deg);
+}
+
+.card__face {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+    overflow: hidden;
+    border-radius: 25px;
+    box-shadow: 0px 3px 18px 3px rgba(0, 0, 0, 0.2);
+}
+.card__face--front{
+    background-image: linear-gradient(to bottom right, var(--primary), var(--secondary));
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.card__face--front h2 {
+    color: aliceblue;
+    font-size: 32px;
+}
+.card__face--back {
+    background-color: var(--white);
+    transform: rotateY(180deg);
+}
+.card__content {
+    width: 100%;
+    height: 100%;
+}
+.card__header {
+    position: relative;
+    padding: 30px 30px 40px;
+}
+.card__header:after {
+    content: "";
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: -1;
+    border-radius: 0 0 50% 0;
+    background-image: linear-gradient(to bottom left, var(--primary) 10%, var (--secondary) 115%);
+}
+
+.avatar1 {
+    display: block;
+    width: 275px;
+    height: 275px;
+    margin: 0 30px;
+    background-color: aliceblue;
+    border: dotted 1px;
+    object-fit: cover;
+    border-radius: 90px;
+    animation: pulse 5s infinite;
+}
+
+.card__header h2 {
+    color:aliceblue;
+    font-size: 32px;
+    font-weight: 900;
+    text-transform: uppercase;
+    text-align: center;
+}
+.card__body {
+    padding: 30px;
+    text-align: center;
+}
+.card__body h3 {
+    color: var(--dark);
+    font-size: 24px;
+    font-weight: 600;
+    margin-bottom: 15px;
+    text-align: center;
+}
+.card__body p {
+    color: var(--dark);
+    font-size: 18px;
+    line-height: 1.5;
+}
+
+
+
+
+/*Card Section*/
