input comments for additional card sections and styles

--- a/Style.css
+++ b/Style.css
@@ -332,6 +332,7 @@ footer p:nth-child(2){
 
 
 /*Card Section*/
+/*---------------------------Card 1---------------------------*/
 .card {
     margin: 100px auto 0;
     width: 400px;
@@ -432,8 +433,18 @@ footer p:nth-child(2){
     font-size: 18px;
     line-height: 1.5;
 }
+/*---------------------------Card 1---------------------------*/
 
 
+/*---------------------------Card 2---------------------------*/
+/*---------------------------Card 2---------------------------*/
 
+
+/*---------------------------Card 3--------------------------
+/*---------------------------Card 3--------------------------
+
+
+/*---------------------------Card 4--------------------------
+/*---------------------------Card 4--------------------------
 
 /*Card Section*/
