--- a/Style.css
+++ b/Style.css
@@ -437,6 +437,106 @@ footer p:nth-child(2){
 
 
 /*---------------------------Card 2---------------------------*/
+.card2 {
+    margin: 100px auto 0;
+    width: 400px;
+    height: 600px;
+    perspective: 1000px;
+}
+
+.card__inner2 {
+    width: 100%;
+    height: 100%;
+    transition: transform 1s;
+    transform-style: preserve-3d;
+    cursor: pointer;
+    position: relative;
+}
+
+.card__inner.is-flipped2 {
+    transform: rotateY(180deg);
+}
+
+.card__face2 {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+    overflow: hidden;
+    border-radius: 25px;
+    box-shadow: 0px 3px 18px 3px rgba(0, 0, 0, 0.2);
+}
+.card__face--front2{
+    background-image: linear-gradient(to bottom right, var(--primary), var(--secondary));
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.card__face--front2 h4 {
+    color: aliceblue;
+    font-size: 32px;
+}
+.card__face--back2 {
+    background-color: var(--white);
+    transform: rotateY(180deg);
+}
+.card__content2 {
+    width: 100%;
+    height: 100%;
+}
+.card__header2 {
+    position: relative;
+    padding: 30px 30px 40px;
+}
+.card__header2:after {
+    content: "";
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: -1;
+    border-radius: 0 0 50% 0;
+    background-image: linear-gradient(to bottom left, var(--primary) 10%, var (--secondary) 115%);
+}
+
+.avatar2 {
+    display: block;
+    width: 275px;
+    height: 275px;
+    margin: 0 30px;
+    background-color: aliceblue;
+    border: dotted 1px;
+    object-fit: cover;
+    border-radius: 90px;
+    animation: pulse 5s infinite;
+}
+
+.card__header2 h4 {
+    color:aliceblue;
+    font-size: 32px;
+    font-weight: 900;
+    text-transform: uppercase;
+    text-align: center;
+}
+.card__body2 {
+    padding: 30px;
+    text-align: center;
+}
+.card__body2 h5 {
+    color: var(--dark);
+    font-size: 24px;
+    font-weight: 600;
+    margin-bottom: 15px;
+    text-align: center;
+}
+.card__body2 p2 {
+    color: var(--dark);
+    font-size: 18px;
+    line-height: 1.5;
+}
 /*---------------------------Card 2---------------------------*/
 
 
