--- a/Style.css
+++ b/Style.css
@@ -168,7 +168,7 @@ h4{
     font-size: 18px;
     margin-bottom: 45px;
 }
-button{
+/*button{
     background-color:var(--themered);
     color: white;
     text-decoration: none;
@@ -187,7 +187,7 @@ button:hover{
               0 0 25px #03e9f4,
               0 0 50px #03e9f4,
               0 0 100px #03e9f4;
-}
+}*/
 
 .service{
     background: white;
@@ -332,219 +332,30 @@ footer p:nth-child(2){
 
 
 /*Card Section*/
-/*---------------------------Card 1---------------------------*/
-.card {
-    margin: 100px auto 0;
-    width: 400px;
-    height: 600px;
-    perspective: 1000px;
+#apps {
+    text-align: center;
 }
 
-.card__inner {
-    width: 100%;
-    height: 100%;
-    transition: transform 1s;
-    transform-style: preserve-3d;
-    cursor: pointer;
-    position: relative;
+.carousel-item {
+    height: 100vh;
+    min-height: 300px;
+    background: no-repeat scroll center scroll;
+    -webkit-background-size: cover;
+    background-size: cover;
 }
 
-.card__inner.is-flipped {
-    transform: rotateY(180deg);
-}
-
-.card__face {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    -webkit-backface-visibility: hidden;
-    backface-visibility: hidden;
-    overflow: hidden;
-    border-radius: 25px;
-    box-shadow: 0px 3px 18px 3px rgba(0, 0, 0, 0.2);
-}
-.card__face--front{
-    background-image: linear-gradient(to bottom right, var(--primary), var(--secondary));
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-.card__face--front h2 {
-    color: aliceblue;
-    font-size: 32px;
-}
-.card__face--back {
-    background-color: var(--white);
-    transform: rotateY(180deg);
-}
-.card__content {
-    width: 100%;
-    height: 100%;
-}
-.card__header {
-    position: relative;
-    padding: 30px 30px 40px;
-}
-.card__header:after {
+.carousel-item::before {
     content: "";
     display: block;
-    position: absolute;
+    position:absolute;
     top: 0;
     left: 0;
     right: 0;
     bottom: 0;
-    z-index: -1;
-    border-radius: 0 0 50% 0;
-    background-image: linear-gradient(to bottom left, var(--primary) 10%, var (--secondary) 115%);
+    background:#000;
+    opacity: 0.7;
 }
 
-.avatar1 {
-    display: block;
-    width: 275px;
-    height: 275px;
-    margin: 0 30px;
-    background-color: aliceblue;
-    border: dotted 1px;
-    object-fit: cover;
-    border-radius: 90px;
-    animation: pulse 5s infinite;
-}
-
-.card__header h2 {
-    color:aliceblue;
-    font-size: 32px;
-    font-weight: 900;
-    text-transform: uppercase;
-    text-align: center;
-}
-.card__body {
-    padding: 30px;
-    text-align: center;
-}
-.card__body h3 {
-    color: var(--dark);
-    font-size: 24px;
-    font-weight: 600;
-    margin-bottom: 15px;
-    text-align: center;
-}
-.card__body p {
-    color: var(--dark);
-    font-size: 18px;
-    line-height: 1.5;
-}
 /*---------------------------Card 1---------------------------*/
 
-
-/*---------------------------Card 2---------------------------*/
-.card2 {
-    margin: 100px auto 0;
-    width: 400px;
-    height: 600px;
-    perspective: 1000px;
-}
-
-.card__inner2 {
-    width: 100%;
-    height: 100%;
-    transition: transform 1s;
-    transform-style: preserve-3d;
-    cursor: pointer;
-    position: relative;
-}
-
-.card__inner.is-flipped2 {
-    transform: rotateY(180deg);
-}
-
-.card__face2 {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    -webkit-backface-visibility: hidden;
-    backface-visibility: hidden;
-    overflow: hidden;
-    border-radius: 25px;
-    box-shadow: 0px 3px 18px 3px rgba(0, 0, 0, 0.2);
-}
-.card__face--front2{
-    background-image: linear-gradient(to bottom right, var(--primary), var(--secondary));
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-.card__face--front2 h4 {
-    color: aliceblue;
-    font-size: 32px;
-}
-.card__face--back2 {
-    background-color: var(--white);
-    transform: rotateY(180deg);
-}
-.card__content2 {
-    width: 100%;
-    height: 100%;
-}
-.card__header2 {
-    position: relative;
-    padding: 30px 30px 40px;
-}
-.card__header2:after {
-    content: "";
-    display: block;
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    z-index: -1;
-    border-radius: 0 0 50% 0;
-    background-image: linear-gradient(to bottom left, var(--primary) 10%, var (--secondary) 115%);
-}
-
-.avatar2 {
-    display: block;
-    width: 275px;
-    height: 275px;
-    margin: 0 30px;
-    background-color: aliceblue;
-    border: dotted 1px;
-    object-fit: cover;
-    border-radius: 90px;
-    animation: pulse 5s infinite;
-}
-
-.card__header2 h4 {
-    color:aliceblue;
-    font-size: 32px;
-    font-weight: 900;
-    text-transform: uppercase;
-    text-align: center;
-}
-.card__body2 {
-    padding: 30px;
-    text-align: center;
-}
-.card__body2 h5 {
-    color: var(--dark);
-    font-size: 24px;
-    font-weight: 600;
-    margin-bottom: 15px;
-    text-align: center;
-}
-.card__body2 p2 {
-    color: var(--dark);
-    font-size: 18px;
-    line-height: 1.5;
-}
-/*---------------------------Card 2---------------------------*/
-
-
-/*---------------------------Card 3--------------------------
-/*---------------------------Card 3--------------------------
-
-
-/*---------------------------Card 4--------------------------
-/*---------------------------Card 4--------------------------
-
-/*Card Section*/
+/*---------------------------Card 1---------------------------*/
