--- a/Style.css
+++ b/Style.css
@@ -331,7 +331,9 @@ footer p:nth-child(2){
 }
 
 
-/*Card Section*/
+/*Carousel Section*/
+
+/*---------------------------Carousel 1---------------------------*/
 #apps {
     text-align: center;
 }
@@ -356,6 +358,7 @@ footer p:nth-child(2){
     opacity: 0.7;
 }
 
-/*---------------------------Card 1---------------------------*/
+/*---------------------------Carousel 1---------------------------*/
 
-/*---------------------------Card 1---------------------------*/
+/*---------------------------Carousel 2---------------------------*/
+/*---------------------------Carousel 2---------------------------*/
